Homework&_Final Project Draft 2

--- a/final_project_just_me/Entertainment.html
+++ b/final_project_just_me/Entertainment.html
@@ -17,7 +17,7 @@
         <a href="Home.html">Home</a>
         <a href="blog.html">Blogs</a>
         <a href="Fitness.html">Fitness</a>
-        <a href="Entertainment.html">Entertainment</a>
+        <a href="Entertainment.html"><strong>Entertainment</strong></a>
         <a href="Style.html">Style</a>
         <a href="Travel.html">Travel</a>
     </nav>
