--- a/final_project_just_me/Style.html
+++ b/final_project_just_me/Style.html
@@ -18,7 +18,7 @@
         <a href="blog.html">Blogs</a>
         <a href="Fitness.html">Fitness</a>
         <a href="Entertainment.html">Entertainment</a>
-        <a href="Style.html">Style</a>
+        <a href="Style.html"><strong>Style</strong></a>
         <a href="Travel.html">Travel</a>
     </nav>
     <h1>Style</h1>
