--- a/final_project_just_me/Travel.html
+++ b/final_project_just_me/Travel.html
@@ -19,7 +19,7 @@
         <a href="Fitness.html">Fitness</a>
         <a href="Entertainment.html">Entertainment</a>
         <a href="Style.html">Style</a>
-        <a href="Travel.html">Travel</a>
+        <a href="Travel.html"><strong>Travel</strong></a>
     </nav>
     <h1>Travel</h1>
   </header>
