--- a/final_project_just_me/Fitness.html
+++ b/final_project_just_me/Fitness.html
@@ -16,7 +16,7 @@
     <nav>
         <a href="Home.html">Home</a>
         <a href="blog.html">Blogs</a>
-        <a href="Fitness.html">Fitness</a>
+        <a href="Fitness.html"><strong>Fitness</strong></a>
         <a href="Entertainment.html">Entertainment</a>
         <a href="Style.html">Style</a>
         <a href="Travel.html">Travel</a>
