--- a/final_project_just_me/Home.html
+++ b/final_project_just_me/Home.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav>
-        <a href="home.html">Home</a>
+        <a href="home.html"><strong>Home</strong></a>
         <a href="blog.html">Blogs</a>
         <a href="Fitness.html">Fitness</a>
         <a href="entertainment.html">Entertainment</a>
