--- a/final_project_just_me/blog.html
+++ b/final_project_just_me/blog.html
@@ -13,33 +13,57 @@
 </head>
 <body>
   <header>
+    <div class="nav-wrapper">
+      <a href="" class="hamburger"><i class="fa fa-bars" aria-hidden="true"></i></a>
     <nav>
         <a href="Home.html">Home</a>
-        <a href="blog.html">Blogs</a>
+        <a href="blog.html"><strong>Blogs</strong></a>
         <a href="Fitness.html">Fitness</a>
         <a href="Entertainment.html">Entertainment</a>
         <a href="Style.html">Style</a>
         <a href="Travel.html">Travel</a>
     </nav>
     <h1>Sheed's Blogs</h1>
-    <p>Welcome to Sheed's Blogs... Sheed's random thoughts. Here you will literally random thoughts that I have during the day possibly about life or other random activites that I've experienced thoughtout the week. I hope you enjoy reading and feel free to comment on any blog and/or ask random questions. Just have fun with it and hopefully I'll here from you soon... <p>
+    <p>Welcome to <strong>Sheed's Blogs</strong>... Here you will literally find random thoughts that I have during the day possibly about life or other random activites that I've experienced thoughtout the week. I hope you enjoy reading and feel free to comment on any blog and/or ask random questions. Just have fun with it and hopefully I'll here from you soon... <p>
   </header>
 <main>
-  <bloglatest><!-- only display latest blogs here-->
-    <h2>Random Selfie</h2>
-    <h3>15 Feb 2018</h3> <!--I would like this field to alto populate with the latest blog date -->
-    <img src="img/blogs/20151211_215638.jpg" alt="">
+  <div class="article">
+    <bloglatest><!-- only display latest blogs here-->
+      <h2>
+         <a href="https://www.google.com/search?q=selfie&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiA06b1i-jZAhUIyFkKHcOfAQ4Q_AUICigB&biw=1852&bih=975">Random Selfie - Let Me Take a Selfie</a>
+       </h2>
+      <h3>15 Feb 2018</h3> <!--I would like this field to alto populate with the latest blog date -->
+      <div class="carousel-wrapper">
+        <article>
+          <img src="img/blogs/20151211_215638.jpg" alt="random_selfie">
+          <p>Have you ever been out with that friend that loves to takes selfies at random times including you in the photo leaving you wondering why... Well I must say that I for one haven't which might meant mean I am <strong>THAT</strong> friend.  Well... yep, guilty as charged. I love randomly taking pictures for no reason what so ever. Capturing a moment unplanned and in an innocent space of time can be really magical at times. At least for you and yet annoying for your friends at the same time. Oh well, its a good things they love me... Anyway, check out some my my selfies with friends and let me know what you think. If you have ramdom photos, share them below and comment. Enjoy!</p>
+        </article>
+        <article>
+          <img src="img/blogs/coteachingwvince.jpg" alt="">
+          <p> Halloween co-teaching class with my buddy Vince. This is one of the most anticipated classes of the year. It's one that everyone really get into and I love the costums people come up with the cycle to. None stop fun here...</p>
+        </article>
+        <article>
+          <img src="img/blogs/classtrip.jpg" alt="">
+          <p>Reconnecting with my classmates from highschool... I guess I shouldn't say Reconnecting since we stay in touch all year round but that is a good bonding experience since we never get to hang out much. And if you didn't notice, they were really getting tired of me and my phone... Gotta love it hahahaha!</p>
+        </article>
+        <article>
+          <img src="img/blogs/IMG_20170610_230928.jpg" alt="">
+          <p>My attempt at taking a glamor shot in the hotel hallway... Not too bad uh... Yeah, I know... Either way, fun times with fun memories.</p>
+        </article>
+        <article>
+          <img src="img/blogs/20150710_160638.jpg" alt="">
+          <p>This is the best "We are not ready..." shot ever!!! I love this photo so much but too bad my friends don't. Eveyone wants to be camera ready and not in the moment. Oh well, I framed it anyway hahahahahaha!</p>
+        </article>
+        <div class="button-loction">
+        <button id="previous">Previous</button>
+        <button id="next">Next</button>
+      </div>
 
-    <p>Have you ever been out with that friend that loves to takes selfies at random times including you in the photo leaving you wondering why... Well I must say that I for one haven't which might meant mean I am <strong>THAT</strong> friend.  Well... yep, guilty as charged. I love randomly taking pictures for no reason what so ever. Capturing a monunment unplanned and in an innocent space of time can be really magical at times. At least for you and yet annoying for your friends at the same time. Oh well, its a good things they love me... Anyway, check out some my my selfies with friends and let me know what you think. If you have ramdom photos, share them below and comment. Enjoy!<p>
-      <img src="img/blogs/coteachingwvince.jpg" alt="">
-      <img src="img/blogs/classtrip.jpg" alt="">
-      <img src="img/blogs/IMG_20170610_230928.jpg" alt="">
-      <img src="img/blogs/20150710_160638.jpg" alt="">
-  </bloglatest>
-  <archive><!--old blogs-->
-    <nav>
 
-    </nav>
+      </div>
+    </bloglatest>
+  </div>
+
 
 
   <!-- Add your site content here. Keep it pretty and use indentation :) -->
