--- a/final_project_just_me/blog.html
+++ b/final_project_just_me/blog.html
@@ -7,7 +7,9 @@
   <title>Blogs - Simply M.E.</title>
   <link rel="apple-touch-icon" href="apple-icon-57x57.png">
   <link rel="shortcut icon" href="favicon-96x96.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
+  		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic|Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/blog.css">
 </head>
@@ -28,7 +30,7 @@
   </header>
 <main>
   <div class="article">
-    <bloglatest><!-- only display latest blogs here-->
+    <section><!-- only display latest blogs here-->
       <h2>
          <a href="https://www.google.com/search?q=selfie&source=lnms&tbm=isch&sa=X&ved=0ahUKEwiA06b1i-jZAhUIyFkKHcOfAQ4Q_AUICigB&biw=1852&bih=975">Random Selfie - Let Me Take a Selfie</a>
        </h2>
@@ -54,14 +56,12 @@
           <img src="img/blogs/20150710_160638.jpg" alt="">
           <p>This is the best "We are not ready..." shot ever!!! I love this photo so much but too bad my friends don't. Eveyone wants to be camera ready and not in the moment. Oh well, I framed it anyway hahahahahaha!</p>
         </article>
-        <div class="button-loction">
-        <button id="previous">Previous</button>
-        <button id="next">Next</button>
       </div>
-
-
+      <div class="button-loction" style="text-align:center;">
+      <button id="previous">Previous</button>
+      <button id="next">Next</button>
       </div>
-    </bloglatest>
+    </section>
   </div>
 
 
